=== 2.6.0 / 2011-14-06

* Adds the --trim option to remove keyframes that come in negative frames (before frame 0).
  Some apps improperly handle such frames (Syntheyes)

=== 2.5.0 / 2011-14-06

* No status display in the progress bar. It was an annoyance.
* There are still crashes with flexmocks in tests, relevant flexmock issues filed upstream
* Fix Ruby 1.9 compatibility (but the situation will get better since it's now the primary version)
* Use update_hints gem for version checks
* PFTrack 2011 and PFMAtchit actually use the same format, so we don't need to have 2 modules for them

=== 2.4.0 / 2011-19-05

* Added an official PFTrack 2011 exporter that is verified

=== 2.3.3 / 2011-12-05

* Fixed parsing of stereoscopic PFTrack exports

=== 2.3.2 / 2011-10-05

* Fixed handling of inline comments which are tacked onto the line in in Shake scripts

=== 2.3.1 / 2011-08-05

* Fixed support for curly braces in Shake scripts
* Added checks to prevent exports with empty trackers or exports which contain no data at all

=== 2.3.0 / 2011-17-04

* Fixed issue#1 (Last tracker in some Flame exports receives an empty shift channel)
* Nicer progress reports
* Modified the Accumulator to support nested iterations and random access

=== 2.2.4 / 2011-04-04

* Properly deal with negative frames happening in Shake scripts sometimes. We will now recognize a script starting at negative
frames and "bump" it's frames in curves so that everything neatly starts at frame 0. Granted this does not give us the same frame range
but most apps wil go bonkers anyway if we send them negative frame numbers.

=== 2.2.3 / 2011-04-03

* Prevent zero-length trackers (trackers having no position information) from being accumulated during import.
This had adverse effects on export modules that could not export trackers containing no information. As a sidenote we
will write down in the doco that an export module should not expect empty trackers with no keyframes to be sent

=== 2.2.2 / 2011-04-03
