@@ -4,11 +4,12 @@
 
 source :gemcutter
 
+gem "flame_channel_parser", "~>2.1"
 gem "progressbar", "~>0.9"
 gem "update_hints", "~>1.0"
 
 gem "flexmock", "~>0.8", :group => [:development, :test]
 gem "cli_test", "~>1.0", :group => [:development, :test]
-gem "hoe", ">=2.9.4", :group => [:development, :test]
+gem "hoe", "~>2.10", :group => [:development, :test]
 
 # vim: syntax=ruby
